docs/v0.2.0a187/_sources/reference/_autosummary/hpcflow.sdk.submission.schedulers.direct.DirectScheduler.rst.txt
hpcflow.sdk.submission.schedulers.direct.DirectScheduler
========================================================

.. currentmodule:: hpcflow.sdk.submission.schedulers.direct

.. autoclass:: DirectScheduler
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~DirectScheduler.cancel_jobs
      ~DirectScheduler.get_job_state_info
      ~DirectScheduler.get_submit_command
      ~DirectScheduler.get_version_info
      ~DirectScheduler.is_jobscript_active
      ~DirectScheduler.is_num_cores_supported
      ~DirectScheduler.parse_submission_output
      ~DirectScheduler.process_resources
      ~DirectScheduler.wait_for_jobscripts
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DirectScheduler.DEFAULT_SHEBANG_ARGS
      ~DirectScheduler.DEFAULT_SHELL_ARGS
      ~DirectScheduler.unique_properties
   
   